added gallery buttons to services

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -140,6 +140,12 @@
     </div>
   </main>
 
+  <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page2.html">
+        <button class="service-gallery-btn">Check Out Our Bathroom Projects</button>
+      </a>
+    </section>
+
   <footer class="site-footer">
     <div class="contact-us-container">
       <span class="contact-info">
