--- a/blockpaving.html
+++ b/blockpaving.html
@@ -141,6 +141,12 @@
     </div>
   </main>
 
+  <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page5.html">
+        <button class="service-gallery-btn">Check Out Our Block Paving Projects</button>
+      </a>
+    </section>
+
   <footer class="site-footer">
     <div class="contact-us-container">
       <span class="contact-info">
