--- a/brickwork.html
+++ b/brickwork.html
@@ -138,6 +138,12 @@
     </div>
   </main>
 
+  <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page4.html">
+        <button class="service-gallery-btn">Check Out Our Brickwork Projects</button>
+      </a>
+    </section>
+
   <footer class="site-footer">
     <div class="contact-us-container">
       <span class="contact-info">
