--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -71,6 +71,7 @@
            <a href="kitchens.html">Kitchens</a>
            <a href="brickwork.html">Brickwork</a>
            <a href="blockpaving.html">Block Paving</a>
+           <a href="landscaping.html">Landscaping</a>
            <a href="decorating.html">Painting & Decorating</a>
            <a href="extensions.html">Extensions</a>
           </ul>
@@ -195,7 +196,111 @@
     <img src="images/utility-room16.jpg" alt="Conversion Image 96" class="lightbox-img">
     <img src="images/utility-room17.jpg" alt="Conversion Image 97" class="lightbox-img">
     <img src="images/utility-room18.jpg" alt="Conversion Image 98" class="lightbox-img">
- 
+    <img src="images/outsideext.jpg" alt="Extension Image 74" class="lightbox-img">
+    <img src="images/outsideext2.jpg" alt="Extension Image 75" class="lightbox-img">
+    <img src="images/outsideext3.jpg" alt="Extension Image 76" class="lightbox-img">
+    <img src="images/outsideext4.jpg" alt="Extension Image 77" class="lightbox-img">
+    <img src="images/outsideext5.jpg" alt="Extension Image 78" class="lightbox-img">
+    <img src="images/outsideext6.jpg" alt="Extension Image 79" class="lightbox-img">
+    <img src="images/outsideext7.jpg" alt="Extension Image 80" class="lightbox-img">
+    <img src="images/outsideext8.jpg" alt="Extension Image 81" class="lightbox-img">
+    <img src="images/outsideext9.jpg" alt="Extension Image 82" class="lightbox-img">
+    <img src="images/outsideext10.jpg" alt="Extension Image 83" class="lightbox-img">
+    <img src="images/outsideext11.jpg" alt="Extension Image 84" class="lightbox-img">
+    <img src="images/outsideext12.jpg" alt="Extension Image 85" class="lightbox-img">
+    <img src="images/outsideext13.jpg" alt="Extension Image 86" class="lightbox-img">
+    <img src="images/outsideext14.jpg" alt="Extension Image 87" class="lightbox-img">
+    <img src="images/outsideext15.jpg" alt="Extension Image 88" class="lightbox-img">
+    <img src="images/outsideext16.jpg" alt="Extension Image 89" class="lightbox-img">
+    <img src="images/outsideext17.jpg" alt="Extension Image 90" class="lightbox-img">
+    <img src="images/outsideext18.jpg" alt="Extension Image 91" class="lightbox-img">
+    <img src="images/outsideext19.jpg" alt="Extension Image 92" class="lightbox-img">
+    <img src="images/outsideext20.jpg" alt="Extension Image 93" class="lightbox-img">
+    <img src="images/outsideext21.jpg" alt="Extension Image 94" class="lightbox-img">
+    <img src="images/outsideext22.jpg" alt="Extension Image 95" class="lightbox-img">
+    <img src="images/outsideext23.jpg" alt="Extension Image 96" class="lightbox-img">
+    <img src="images/outsideext24.jpg" alt="Extension Image 97" class="lightbox-img">
+    <img src="images/outsideext25.jpg" alt="Extension Image 98" class="lightbox-img">
+    <img src="images/outsideext26.jpg" alt="Extension Image 99" class="lightbox-img">
+    <img src="images/outsideext27.jpg" alt="Extension Image 100" class="lightbox-img">
+    <img src="images/outsideext28.jpg" alt="Extension Image 101" class="lightbox-img">
+    <img src="images/outsideext29.jpg" alt="Extension Image 102" class="lightbox-img">
+    <img src="images/outsideext30.jpg" alt="Extension Image 103" class="lightbox-img">
+    <img src="images/outsideext31.jpg" alt="Extension Image 104" class="lightbox-img">
+    <img src="images/outsideext32.jpg" alt="Extension Image 105" class="lightbox-img">
+    <img src="images/outsideext33.jpg" alt="Extension Image 106" class="lightbox-img">
+    <img src="images/outsideext34.jpg" alt="Extension Image 107" class="lightbox-img">
+    <img src="images/outsideext35.jpg" alt="Extension Image 108" class="lightbox-img">
+    <img src="images/outsideext36.jpg" alt="Extension Image 109" class="lightbox-img">
+    <img src="images/outsideext37.jpg" alt="Extension Image 110" class="lightbox-img">
+    <img src="images/outsideext36.jpg" alt="Extension Image 111" class="lightbox-img">
+    <img src="images/outsideext37.jpg" alt="Extension Image 112" class="lightbox-img">
+    <img src="images/outsideext38.jpg" alt="Extension Image 113" class="lightbox-img">
+    <img src="images/outsideext39.jpg" alt="Extension Image 114" class="lightbox-img">
+    <img src="images/outsideext40.jpg" alt="Extension Image 115" class="lightbox-img">
+    <img src="images/outsideext50.jpg" alt="Extension Image 116" class="lightbox-img">
+    <img src="images/outsideext51.jpg" alt="Extension Image 117" class="lightbox-img">
+    <img src="images/outsideext52.jpg" alt="Extension Image 118" class="lightbox-img">
+    <img src="images/outsideext53.jpg" alt="Extension Image 119" class="lightbox-img">
+    <img src="images/outsideext54.jpg" alt="Extension Image 120" class="lightbox-img">
+    <img src="images/outsideext55.jpg" alt="Extension Image 121" class="lightbox-img">
+    <img src="images/outsideext56.jpg" alt="Extension Image 122" class="lightbox-img">
+    <img src="images/outsideext57.jpg" alt="Extension Image 123" class="lightbox-img">
+    <img src="images/outsideext58.jpg" alt="Extension Image 124" class="lightbox-img">
+    <img src="images/outsideext59.jpg" alt="Extension Image 125" class="lightbox-img">
+    <img src="images/outsideext60.jpg" alt="Extension Image 126" class="lightbox-img">
+    <img src="images/outsideext61.jpg" alt="Extension Image 127" class="lightbox-img">
+    <img src="images/outsideext62.jpg" alt="Extension Image 128" class="lightbox-img">
+    <img src="images/outsideext63.jpg" alt="Extension Image 129" class="lightbox-img">
+    <img src="images/outsideext64.jpg" alt="Extension Image 130" class="lightbox-img">
+    <img src="images/outsideext65.jpg" alt="Extension Image 131" class="lightbox-img">
+    <img src="images/outsideext67.jpg" alt="Extension Image 132" class="lightbox-img">
+    <img src="images/outsideext68.jpg" alt="Extension Image 133" class="lightbox-img">
+    <img src="images/outsideext69.jpg" alt="Extension Image 134" class="lightbox-img">
+    <img src="images/outsideext70.jpg" alt="Extension Image 135" class="lightbox-img">
+    <img src="images/outsideext71.jpg" alt="Extension Image 136" class="lightbox-img">
+    <img src="images/outsideext72.jpg" alt="Extension Image 137" class="lightbox-img">
+    <img src="images/outsideext73.jpg" alt="Extension Image 138" class="lightbox-img">
+    <img src="images/outsideext74.jpg" alt="Extension Image 139" class="lightbox-img">
+    <img src="images/outsideext75.jpg" alt="Extension Image 140" class="lightbox-img">
+    <img src="images/staircase.jpg" alt="Extension Image 141" class="lightbox-img">
+    <img src="images/outsideext76.jpg" alt="Extension Image 142" class="lightbox-img">
+    <img src="images/outsideext77.jpg" alt="Extension Image 143" class="lightbox-img">
+    <img src="images/outsideext78.jpg" alt="Extension Image 144" class="lightbox-img">
+    <img src="images/outsideext79.jpg" alt="Extension Image 145" class="lightbox-img">
+    <img src="images/outsideext80.jpg" alt="Extension Image 146" class="lightbox-img">
+    <img src="images/outsideext81.jpg" alt="Extension Image 147" class="lightbox-img">
+    <img src="images/outsideext82.jpg" alt="Extension Image 148" class="lightbox-img">
+    <img src="images/outsideext83.jpg" alt="Extension Image 149" class="lightbox-img">
+    <img src="images/outsideext84.jpg" alt="Extension Image 150" class="lightbox-img">
+    <img src="images/outsideext85.jpg" alt="Extension Image 151" class="lightbox-img">
+    <img src="images/outsideext86.jpg" alt="Extension Image 152" class="lightbox-img">
+    <img src="images/outsideext87.jpg" alt="Extension Image 153" class="lightbox-img">
+    <img src="images/outsideext88.jpg" alt="Extension Image 154" class="lightbox-img">
+    <img src="images/outsideext89.jpg" alt="Extension Image 155" class="lightbox-img">
+    <img src="images/outsideext90.jpg" alt="Extension Image 156" class="lightbox-img">
+    <img src="images/outsideext91.jpg" alt="Extension Image 157" class="lightbox-img">
+    <img src="images/outsideext92.jpg" alt="Extension Image 158" class="lightbox-img">
+    <img src="images/outsideext93.jpg" alt="Extension Image 159" class="lightbox-img">
+    <img src="images/outsideext94.jpg" alt="Extension Image 160" class="lightbox-img">
+    <img src="images/outsideext95.jpg" alt="Extension Image 161" class="lightbox-img">
+    <img src="images/outsideext96.jpg" alt="Extension Image 162" class="lightbox-img">
+    <img src="images/outsideext97.jpg" alt="Extension Image 163" class="lightbox-img">
+    <img src="images/outsideext98.jpg" alt="Extension Image 164" class="lightbox-img">
+    <img src="images/outsideext99.jpg" alt="Extension Image 165" class="lightbox-img">
+    <img src="images/outsideext100.jpg" alt="Extension Image 166" class="lightbox-img">
+    <img src="images/outsideext101.jpg" alt="Extension Image 167" class="lightbox-img">
+    <img src="images/outsideext101.jpg" alt="Extension Image 168" class="lightbox-img">
+    <img src="images/outsideext102.jpg" alt="Extension Image 169" class="lightbox-img">
+    <img src="images/outsideext103.jpg" alt="Extension Image 170" class="lightbox-img">
+    <img src="images/outsideext104.jpg" alt="Extension Image 171" class="lightbox-img">
+    <img src="images/outsideext105.jpg" alt="Extension Image 172" class="lightbox-img">
+    <img src="images/outsideext106.jpg" alt="Extension Image 173" class="lightbox-img">
+    <img src="images/outsideext107.jpg" alt="Extension Image 174" class="lightbox-img">
+    <img src="images/pat-door.jpg" alt="Extension Image 175" class="lightbox-img">
+    <img src="images/pat-door2.jpg" alt="Extension Image 176" class="lightbox-img">
+    <img src="images/pat-door3.jpg" alt="Extension Image 177" class="lightbox-img">
+
  
 
 
