--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -71,6 +71,7 @@
            <a href="kitchens.html">Kitchens</a>
            <a href="brickwork.html">Brickwork</a>
            <a href="blockpaving.html">Block Paving</a>
+          <a href="landscaping.html">Landscaping</a>
            <a href="decorating.html">Painting & Decorating</a>
            <a href="extensions.html">Extensions</a>
           </ul>
