--- a/services.html
+++ b/services.html
@@ -73,6 +73,7 @@
                <a href="kitchens.html">Kitchens</a>
                <a href="brickwork.html">Brickwork</a>
                <a href="blockpaving.html">Block Paving</a>
+              <a href="landscaping.html">Landscaping</a>
                <a href="decorating.html">Painting & Decorating</a>
                <a href="extensions.html">Extensions</a>
               </ul>
@@ -166,6 +167,13 @@
       <a href="contact.html" class="button">Contact Us Today</a>
     </div>
   </main>
+
+   <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery.html">
+        <button class="service-gallery-btn">Check Out Our Projects</button>
+      </a>
+    </section>
+
 
   <footer class="site-footer">
     <div class="contact-us-container">
