--- a/extensions.html
+++ b/extensions.html
@@ -141,6 +141,13 @@
     </div>
   </main>
 
+   <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page8.html">
+        <button class="service-gallery-btn">Check Out Our Extension/Conversion Projects</button>
+      </a>
+    </section>
+
+
   <footer class="site-footer">
     <div class="contact-us-container">
       <span class="contact-info">
