--- a/kitchens.html
+++ b/kitchens.html
@@ -72,6 +72,7 @@
              <a href="kitchens.html">Kitchens</a>
              <a href="brickwork.html">Brickwork</a>
              <a href="blockpaving.html">Block Paving</a>
+             <a href="landscaping.html">Landscaping</a>
              <a href="decorating.html">Painting & Decorating</a>
              <a href="extensions.html">Extensions</a>
             </ul>
@@ -141,6 +142,15 @@
       <a href="contact.html" class="button">Contact Us for Kitchen Help</a>
     </div>
   </main>
+
+   <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page3.html">
+        <button class="service-gallery-btn">Check Out Our Kitchen Projects</button>
+      </a>
+    </section>
+
+     
+      
 
   <footer class="site-footer">
     <div class="contact-us-container">
