--- a/roofing.html
+++ b/roofing.html
@@ -74,6 +74,7 @@
                <a href="kitchens.html">Kitchens</a>
                <a href="brickwork.html">Brickwork</a>
                <a href="blockpaving.html">Block Paving</a>
+               <a href="landscaping.html">Landscaping</a>
                <a href="decorating.html">Painting & Decorating</a>
                <a href="extensions.html">Extensions</a>
               </ul>
@@ -146,8 +147,22 @@
 
     <div class="button-container">
       <a href="contact.html" class="button">Contact Us for Roofing Help</a>
-    </div>
-  </main>
+     </div>
+
+    
+
+ </main>
+
+  <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="gallery-page1.html">
+        <button class="service-gallery-btn">Check Out Our Roofing Projects</button>
+      </a>
+    </section>
+
+
+
+
+
 
   <footer class="site-footer">
     <div class="contact-us-container">
