added og image and favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Comprehensive Kent building services from A.P.T. Builders: roofing, bathroom & kitchen fittings, landscaping, brickwork, block paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
-  <meta name="keywords" content="building services, Kent builders, roofing, bathroom fittings, kitchen fittings, landscaping, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
+  <meta name="description" content="Comprehensive Kent building services from A.P.T. Builders, including roofing, bathroom & kitchen fittings, landscaping, brickwork, block paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="keywords" content="building services, Kent builders, local builders, roofing, bathroom fittings, kitchen fittings, landscaping, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
+ 
+  <title>A.P.T.Builders</title>
+   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+   <link rel="apple-touch-icon" href="images/aptfavicon.png">
+   
+   <head>
+  <meta property="og:title" content="A.P.T Builders">
+  <meta property="og:description" content="Reliable Building Services in Kent">
+  <meta property="og:image" content="images/ogimage.png">
+  <meta property="og:url" content="https://example.com">
+  <meta property="og:type" content="website">
+</head>
 
   
-  <title>A.P.T.Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/Banner%20two.jpg" importance="high" />
 </head>
