added link image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
   <title>A.P.T.Builders</title>
    <link rel="icon" href="images/aptfavicon.png" type="image/png">
-   <link rel="apple-touch-icon" href="images/aptfavicon.png">
+   <meta name="ogimage" content="images/ogimage.png"/>
    
    <head>
   <meta property="og:title" content="A.P.T Builders">
