--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
  
   <title>A.P.T.Builders</title>
    <link rel="icon" href="images/aptfavicon.png" type="image/png">
-   <meta name="ogimage" content="images/ogimage.png"/>
-   
   
   <meta property="og:title" content="A.P.T Builders">
-  <meta property="og:description" content="Reliable Building Services in Kent">
+  <meta property="og:description" content="Reliable Builders in Kent">
+  <meta property="og:image" content="images/ogimage.png">
+  <meta property="og:url" content="https://hnbevan.github.io/client-website/">
+  <meta property="og:type" content="website">
+
+
 
 </head>
 
