added favicon to each page

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
   <div class="page-wrapper">
