--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -10,6 +10,7 @@
 
     <title>Gallery - Bathrooms</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
