--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="block paving gallery, driveway projects, pathway gallery, permeable paving, Ashford, Maidstone, Folkestone, Canterbury">
 
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
