--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -9,6 +9,7 @@
 
     <title>Gallery - Landscaping</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
