--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -8,6 +8,7 @@
 
     <title>Gallery - Painting & Decorating</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
   <div class="page-wrapper">
