--- a/kitchens.html
+++ b/kitchens.html
@@ -12,6 +12,7 @@
   <title>Kitchen Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/kitchen-banner.png" importance="high">
+   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
