--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
   <title>Our Services | A.P.T Builders in Kent</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/services-banner.png" importance="high">
+   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
