--- a/bathrooms.html
+++ b/bathrooms.html
@@ -11,7 +11,7 @@
   <title>Bathroom Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high">
-
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
