--- a/blockpaving.html
+++ b/blockpaving.html
@@ -10,7 +10,7 @@
   <title>Block Paving & Driveways in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high">
-
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
