--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -9,6 +9,7 @@
 
     <title>Gallery - Kitchens</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 
   <body>
