--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -8,6 +8,7 @@
 
     <title>Gallery - Extensions & Conversions</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
