--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -8,6 +8,7 @@
 
     <title>Gallery - Specialist Builds</title>
     <link rel="stylesheet" href="styles/style.css">
+     <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
 
