--- a/landscaping.html
+++ b/landscaping.html
@@ -11,6 +11,7 @@
   <title>Landscaping Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/landscaping-banner.png" importance="high">
+   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
