added touch swipe to carosel

--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -137,6 +137,58 @@
       <img src="images/drive3.jpg" alt="Blockpaving Image 43" class="lightbox-img">
       <img src="images/drive4.jpg" alt="Blockpaving Image 44" class="lightbox-img">
       <img src="images/drive5.jpg" alt="Blockpaving Image 41" class="lightbox-img">
+      <img src="images/base.jpg" alt="Blockpaving Image 42" class="lightbox-img">
+      <img src="images/base2.jpg" alt="Blockpaving Image 43" class="lightbox-img">
+      <img src="images/base3.jpg" alt="Blockpaving Image 44" class="lightbox-img">
+      <img src="images/base4.jpg" alt="Blockpaving Image 45" class="lightbox-img">
+      <img src="images/base5.jpg" alt="Blockpaving Image 46" class="lightbox-img">
+      <img src="images/base6.jpg" alt="Blockpaving Image 47" class="lightbox-img">
+      <img src="images/base7.jpg" alt="Blockpaving Image 48" class="lightbox-img">
+      <img src="images/base8.jpg" alt="Blockpaving Image 49" class="lightbox-img">
+      <img src="images/base9.jpg" alt="Blockpaving Image 50" class="lightbox-img">
+      <img src="images/base10.jpg" alt="Blockpaving Image 51" class="lightbox-img">
+      <img src="images/base11.jpg" alt="Blockpaving Image 52" class="lightbox-img">
+      <img src="images/base12.jpg" alt="Blockpaving Image 53" class="lightbox-img">
+      <img src="images/base13.jpg" alt="Blockpaving Image 54" class="lightbox-img">
+      <img src="images/base14.jpg" alt="Blockpaving Image 55" class="lightbox-img">
+      <img src="images/base15.jpg" alt="Blockpaving Image 56" class="lightbox-img">
+      <img src="images/base16.jpg" alt="Blockpaving Image 57" class="lightbox-img">
+      <img src="images/base17.jpg" alt="Blockpaving Image 58" class="lightbox-img">
+      <img src="images/base18.jpg" alt="Blockpaving Image 59" class="lightbox-img">
+      <img src="images/base19.jpg" alt="Blockpaving Image 60" class="lightbox-img">
+      <img src="images/base20.jpg" alt="Blockpaving Image 61" class="lightbox-img">
+      <img src="images/base21.jpg" alt="Blockpaving Image 62" class="lightbox-img">
+      <img src="images/base22.jpg" alt="Blockpaving Image 63" class="lightbox-img">
+      <img src="images/base23.jpg" alt="Blockpaving Image 64" class="lightbox-img">
+      <img src="images/block-walkway.jpg" alt="Blockpaving Image 65" class="lightbox-img">
+      <img src="images/block-walkway2.jpg" alt="Blockpaving Image 66" class="lightbox-img">
+      <img src="images/block-path.jpg" alt="Blockpaving Image 67" class="lightbox-img">
+      <img src="images/block-path2.jpg" alt="Blockpaving Image 68" class="lightbox-img">
+      <img src="images/block-path3.jpg" alt="Blockpaving Image 69" class="lightbox-img">
+      <img src="images/block-path4.jpg" alt="Blockpaving Image 70" class="lightbox-img">
+      <img src="images/block-path5.jpg" alt="Blockpaving Image 71" class="lightbox-img">
+      <img src="images/block-path6.jpg" alt="Blockpaving Image 72" class="lightbox-img">
+      <img src="images/block-path7.jpg" alt="Blockpaving Image 73" class="lightbox-img">
+      <img src="images/block-path8.jpg" alt="Blockpaving Image 74" class="lightbox-img">
+      <img src="images/block-path9.jpg" alt="Blockpaving Image 75" class="lightbox-img">
+      <img src="images/block-path10.jpg" alt="Blockpaving Image 76" class="lightbox-img">
+      <img src="images/block-path11.jpg" alt="Blockpaving Image 67" class="lightbox-img">
+      <img src="images/b-drive.jpg" alt="Blockpaving Image 68" class="lightbox-img">
+      <img src="images/b-drive2.jpg" alt="Blockpaving Image 69" class="lightbox-img">
+      <img src="images/b-drive3.jpg" alt="Blockpaving Image 70" class="lightbox-img">
+      <img src="images/b-drive4.jpg" alt="Blockpaving Image 71" class="lightbox-img">
+      <img src="images/b-drive5.jpg" alt="Blockpaving Image 72" class="lightbox-img">
+      <img src="images/b-drive6.jpg" alt="Blockpaving Image 73" class="lightbox-img">
+      <img src="images/b-drive7.jpg" alt="Blockpaving Image 74" class="lightbox-img">
+      <img src="images/b-drive8.jpg" alt="Blockpaving Image 75" class="lightbox-img">
+      <img src="images/b-drive9.jpg" alt="Blockpaving Image 76" class="lightbox-img">
+      <img src="images/b-drive10.jpg" alt="Blockpaving Image 77" class="lightbox-img">
+      <img src="images/b-drive11.jpg" alt="Blockpaving Image 78" class="lightbox-img">
+      <img src="images/b-drive12.jpg" alt="Blockpaving Image 79" class="lightbox-img">
+      <img src="images/b-drive13.jpg" alt="Blockpaving Image 80" class="lightbox-img">
+      <img src="images/b-drive14.jpg" alt="Blockpaving Image 81" class="lightbox-img">
+      <img src="images/b-drive15.jpg" alt="Blockpaving Image 82" class="lightbox-img">
+      <img src="images/b-drive16.jpg" alt="Blockpaving Image 83" class="lightbox-img">
      
 
 
